--- a/Source/TeleCore/src/TeleCore.Events/TeleCore.Events.csproj
+++ b/Source/TeleCore/src/TeleCore.Events/TeleCore.Events.csproj
@@ -9,7 +9,7 @@
         <Authors>Telefonmast (aka Maxim)</Authors>
         <Company>TeleGames</Company>
         <RootNamespace>TeleCore.Events</RootNamespace>
-        <AssemblyName>TeleCore.Events</AssemblyName>
+        <AssemblyName>0TeleCore.Events</AssemblyName>
         <Nullable>enable</Nullable>
         <Copyright>Copyright © 2024 Maxim Switenko</Copyright>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
