--- a/Source/TeleCore/src/TeleCore.Shared/TeleCore.Shared.csproj
+++ b/Source/TeleCore/src/TeleCore.Shared/TeleCore.Shared.csproj
@@ -9,7 +9,7 @@
         <Authors>Telefonmast (aka Maxim)</Authors>
         <Company>TeleGames</Company>
         <RootNamespace>TeleCore.Shared</RootNamespace>
-        <AssemblyName>TeleCore.Shared</AssemblyName>
+        <AssemblyName>0TeleCore.Shared</AssemblyName>
         <Nullable>enable</Nullable>
         <Copyright>Copyright © 2024 Maxim Switenko</Copyright>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -60,6 +60,12 @@
     
     <ItemGroup>
       <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Reference Include="HotSwap">
+        <HintPath>..\..\..\..\..\HotSwap-master\Assemblies\HotSwap.dll</HintPath>
+      </Reference>
     </ItemGroup>
     
 </Project>
