--- a/Source/TeleCore/src/TeleCore.AssetLoader/TeleCore.AssetLoader.csproj
+++ b/Source/TeleCore/src/TeleCore.AssetLoader/TeleCore.AssetLoader.csproj
@@ -2,45 +2,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net481</TargetFramework>
-        <LangVersion>preview</LangVersion>
-        <OutputPath>..\..\..\..\Assemblies</OutputPath>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <Authors>Telefonmast (aka Maxim)</Authors>
-        <Company>TeleGames</Company>
         <RootNamespace>TeleCore.AssetLoader</RootNamespace>
-        <AssemblyName>0TeleCore.AssetLoader</AssemblyName>
-        <Nullable>enable</Nullable>
-        <Copyright>Copyright © 2023 Maxim Switenko</Copyright>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <AssemblyName>TeleCore.AssetLoader</AssemblyName>
     </PropertyGroup>
-    
-    <ItemGroup>
-        <Publicize Include="Assembly-CSharp" />
-    </ItemGroup>
-    
-    <ItemGroup>
-        <PackageReference Include="Krafs.Publicizer" Version="2.2.1">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4085" GeneratePathProperty="true" ExcludeAssets="runtime">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Lib.Harmony" Version="2.3.3">
-            <PrivateAssets>all</PrivateAssets>
-            <ExcludeAssets>runtime</ExcludeAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="UnlimitedHugs.Rimworld.HugsLib" Version="11.0.3" ExcludeAssets="runtime">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
