--- a/Source/TeleCore/src/TeleCore.Events/TeleCore.Events.csproj
+++ b/Source/TeleCore/src/TeleCore.Events/TeleCore.Events.csproj
@@ -2,62 +2,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net481</TargetFramework>
-        <LangVersion>preview</LangVersion>
-        <OutputPath>..\..\..\..\Assemblies</OutputPath>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <Authors>Telefonmast (aka Maxim)</Authors>
-        <Company>TeleGames</Company>
         <RootNamespace>TeleCore.Events</RootNamespace>
-        <AssemblyName>0TeleCore.Events</AssemblyName>
-        <Nullable>enable</Nullable>
-        <Copyright>Copyright © 2024 Maxim Switenko</Copyright>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    </PropertyGroup>
-    
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <DebugType>full</DebugType>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DefineConstants>TRACE;DEBUG</DefineConstants>
-        <WarningLevel>4</WarningLevel>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+        <AssemblyName>TeleCore.Events</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
         <ProjectReference Include="..\TeleCore.Shared\TeleCore.Shared.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Publicize Include="Assembly-CSharp" />
-    </ItemGroup>
-    
-    <ItemGroup>
-        <PackageReference Include="Krafs.Publicizer" Version="2.2.1">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4085" GeneratePathProperty="true" ExcludeAssets="runtime">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Lib.Harmony" Version="2.3.3">
-            <PrivateAssets>all</PrivateAssets>
-            <ExcludeAssets>runtime</ExcludeAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="UnlimitedHugs.Rimworld.HugsLib" Version="11.0.3" ExcludeAssets="runtime">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
     </ItemGroup>
     
 </Project>
