--- a/Source/TeleCore/src/TeleCore.PipeNetwork/TeleCore.PipeNetwork.csproj
+++ b/Source/TeleCore/src/TeleCore.PipeNetwork/TeleCore.PipeNetwork.csproj
@@ -42,6 +42,12 @@
         <Compile Include="Class1.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="Krafs.Publicizer" Version="2.2.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
