--- a/Source/TeleCore/src/TeleCore.Shared/TeleCore.Shared.csproj
+++ b/Source/TeleCore/src/TeleCore.Shared/TeleCore.Shared.csproj
@@ -2,45 +2,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net481</TargetFramework>
-        <LangVersion>preview</LangVersion>
-        <OutputPath>..\..\..\..\Assemblies</OutputPath>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <Authors>Telefonmast (aka Maxim)</Authors>
-        <Company>TeleGames</Company>
         <RootNamespace>TeleCore.Shared</RootNamespace>
-        <AssemblyName>0TeleCore.Shared</AssemblyName>
-        <Nullable>enable</Nullable>
-        <Copyright>Copyright © 2024 Maxim Switenko</Copyright>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <AssemblyName>TeleCore.Shared</AssemblyName>
     </PropertyGroup>
-
-    <ItemGroup>
-        <Publicize Include="Assembly-CSharp" />
-    </ItemGroup>
-    
-    <ItemGroup>
-        <PackageReference Include="Krafs.Publicizer" Version="2.2.1">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4085" GeneratePathProperty="true" ExcludeAssets="runtime">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Lib.Harmony" Version="2.3.3">
-            <PrivateAssets>all</PrivateAssets>
-            <ExcludeAssets>runtime</ExcludeAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="UnlimitedHugs.Rimworld.HugsLib" Version="11.0.3" ExcludeAssets="runtime">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
     
     <ItemGroup>
       <Compile Remove="ImmArray\Full\**" />
@@ -55,17 +19,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
-    </ItemGroup>
-    
-    <ItemGroup>
-      <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
-    </ItemGroup>
-    
-    <ItemGroup>
-      <Reference Include="HotSwap">
-        <HintPath>..\..\..\..\..\HotSwap-master\Assemblies\HotSwap.dll</HintPath>
-      </Reference>
+        <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
     </ItemGroup>
     
 </Project>
