--- a/Source/TeleCore/src/TeleCore.RWExtensions/TeleCore.RWExtensions.csproj
+++ b/Source/TeleCore/src/TeleCore.RWExtensions/TeleCore.RWExtensions.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TeleCore.Loader\TeleCore.Loader.csproj" />
+      <ProjectReference Include="..\TeleCore.Shared\TeleCore.Shared.csproj" />
     </ItemGroup>
     
 </Project>
