--- a/Source/TeleCore/src/TeleCore.Animations/TeleCore.Animations.csproj
+++ b/Source/TeleCore/src/TeleCore.Animations/TeleCore.Animations.csproj
@@ -5,4 +5,8 @@
         <RootNamespace>TeleCore</RootNamespace>
         <AssemblyName>TeleCore.Animations</AssemblyName>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TeleCore.Lib\TeleCore.Lib.csproj" />
+    </ItemGroup>
 </Project>
