--- a/Source/TeleCore/src/TeleCore.RWDevTools/TeleCore.RWDevTools.csproj
+++ b/Source/TeleCore/src/TeleCore.RWDevTools/TeleCore.RWDevTools.csproj
@@ -6,4 +6,8 @@
         <AssemblyName>TeleCore.RWDevTools</AssemblyName>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TeleCore.Shared\TeleCore.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
